--- a/nosotros.html
+++ b/nosotros.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1"><!--  -->
     
-    <title>Primera Web con Bootstrap</title>
+    <title>Cambiando de titulo la pagina nosotros.html</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet"><!-- INCLUYE AL BOSSTRAP ALA WEB -->
