--- a/contacto.html
+++ b/contacto.html
@@ -34,7 +34,7 @@
 
 										        <div class="col-md-4">
 												        						<ul class="nav nav-pills">
-																				  <li class="active">
+		//Agregando comentarios a contacto,html																		  <li class="active">
 																			    <a href="inicio.html">Inicio</a>
 																				  </li>
 																				  <li><a href="nosotros.html">Nosotros</a></li>
