--- a/inicio.html
+++ b/inicio.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1"><!--  -->
     
-    <title>cambiinado de  titulo inicio.html</title>
+    <title>Inicio</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet"><!-- INCLUYE AL BOSSTRAP ALA WEB -->
